# hyperliquid_alert

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: global_data.rs  init.rs  main.rs  mod.rs
src/bot/: commands.rs  error_sender.rs  mod.rs  msg_delete.rs  msg_modifiers.rs  msg_senders.rs  utils.rs
src/constants/: mod.rs  moderators.rs  pumpcheck.rs  schedules.rs
src/db/: init_bdd.rs  mod.rs
src/db/services/: chat.rs  demands.rs  mod.rs  tokens.rs
src/db/sql/: bdd.sql
src/handlers/: callback.rs  commands.rs  invites.rs  mod.rs
src/hyperliquid/: fetch_price.rs  mod.rs
src/procedures/: fill_demands.rs  main.rs  mod.rs  pump_alert.rs
src/types/: commands.rs  mod.rs  twitter_client.rs
