[package]
name = "wagmi_alert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clokwerk = "0.4.0"
dotenv = "0.15.0"
dptree = "0.3.0"

lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"

rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros",] }
tokio = { version =  "1.8", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
sha2 = "0.10"
use = "0.0.1-pre.0"
chrono = "0.4.38"
cron_clock = "0.8.0"
futures = "0.3.31"
oauth = "0.0.1"
oauth2 = "4.4.2"
base64 = "0.22.1"
sqlx = { version = "0.5.0", features = ["postgres", "runtime-tokio-native-tls", "macros"] }





[target.'cfg(target_os = "linux")']
rustflags = ["-C", "target-feature=+crt-static"]
